--- a/Dockerfile.save
+++ b/Dockerfile.save
@@ -1,11 +1,12 @@
 # stage 1
 FROM node:latest as node
+build
 WORKDIR /app
 COPY . .
 RUN npm install
-RUN npm run build -- --production
-#expose 3000
-#cmd ["npm","run","start"]
+RUN npm run buil --prod
+expose 3000
+cmd ["npm","run","start"]
 # stage 2
 FROM nginx:alpine
 COPY --from=node /app/dist/angular-app /usr/share/nginx/html
